Intentar crear el contenedor del api en el registry de John (2)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,4 @@ jobs:
         with:
           context: api
           push: true
-          tags: ${{ github.repository_owner }}/api:latest
+          tags: ${{ github.repository }}:latest
