--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,8 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./api
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ github.repository }}:latest
+          tags: |
+            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:1.0.0
