--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,3 +8,16 @@ services:
       dockerfile: Dockerfile
     ports:
       - '4000:5000'
+    volumes:
+      - uploads-volume:/app/uploads
+
+  jobs:
+    build:
+      context: ../jobs
+      dockerfile: Dockerfile
+    volumes:
+      - uploads-volume:/app/uploads
+
+volumes:
+
+  uploads-volume:
