Preparar la maquina donde se va a trabajar (Estado del desarrollo: alpha)

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,8 @@
 {
     "recommendations": [
         "PKief.material-icon-theme",
+        "hashicorp.terraform",
+        "hashicorp.hcl"   
     ]
 }
   
