--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - '5000:5000'
     networks:
-      red-proyecto:
+      redproyecto:
         ipv4_address: 10.130.13.2
     volumes:
       - uploads-volume:/app/uploads
@@ -15,7 +15,7 @@ services:
   jobs:
     image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/jobs:latest
     networks:
-      red-proyecto:
+      redproyecto:
         ipv4_address: 10.130.13.3
     volumes:
       - uploads-volume:/app/uploads
@@ -25,7 +25,7 @@ services:
     ports:
       - '6379:6379'
     networks:
-      red-proyecto:
+      redproyecto:
         ipv4_address: 10.130.13.4
     volumes:
       - redis-data:/data
@@ -38,7 +38,7 @@ services:
     ports:
       - '8082:8081'
     networks:
-      red-proyecto:
+      redproyecto:
         ipv4_address: 10.130.13.5
     depends_on:
       - 'custom-redis'
@@ -48,7 +48,7 @@ services:
     ports:
       - '8888:8888'
     networks:
-      red-proyecto:
+      redproyecto:
         ipv4_address: 10.130.13.6
 
 volumes:
@@ -58,7 +58,7 @@ volumes:
 
 networks:
 
-  proyecto:
+  redproyecto:
     ipam:
       driver: default
       config:
