--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -3,6 +3,7 @@ version: '3.9'
 services:
 
   api:
+    container_name: api
     build:
       context: ../api
       dockerfile: Dockerfile
@@ -13,8 +14,11 @@ services:
         ipv4_address: 10.130.13.2
     volumes:
       - uploads-volume:/app/uploads
+    depends_on:
+      - 'custom-postgres'
 
   jobs:
+    container_name: jobs
     build:
       context: ../jobs
       dockerfile: Dockerfile
@@ -25,6 +29,7 @@ services:
       - uploads-volume:/app/uploads
 
   custom-redis:
+    container_name: custom-redis
     build:
       context: ../custom-redis
       dockerfile: Dockerfile
@@ -37,6 +42,7 @@ services:
       - redis-data:/data
 
   redis-commander:
+    container_name: redis-commander
     image: ghcr.io/joeferner/redis-commander:latest
     restart: always
     environment:
@@ -49,7 +55,22 @@ services:
     depends_on:
       - 'custom-redis'
 
+  custom-postgres:
+    container_name: custom-postgres
+    build:
+      context: ../custom-postgres
+      dockerfile: Dockerfile
+    ports:
+      - "5433:5432"
+    networks:
+      redproyecto:
+        ipv4_address: 10.130.13.6
+    volumes:
+      - ../custom-postgres/docker_postgres_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
+      - postgres-data:/var/lib/postgresql/data
+
   custom-nginx:
+    container_name: custom-nginx
     build:
       context: ../custom-nginx
       dockerfile: Dockerfile
@@ -57,7 +78,7 @@ services:
       - '8888:8888'
     networks:
       redproyecto:
-        ipv4_address: 10.130.13.6
+        ipv4_address: 10.130.13.7
     depends_on:
       - 'api'
       - 'redis-commander'
@@ -66,6 +87,7 @@ volumes:
 
   uploads-volume:
   redis-data:
+  postgres-data:
 
 networks:
 
