feat: Update database definition

--- a/custom-postgres/Dockerfile
+++ b/custom-postgres/Dockerfile
@@ -1,6 +1,12 @@
 FROM postgres:latest
-ENV POSTGRES_PASSWORD=ckhAMLIteFlYheRptAteapeze
-EXPOSE 5432
+
+ENV POSTGRES_USER converter_db
+ENV POSTGRES_PASSWORD ckhAMLIteFlYheRptAteapeze
+ENV POSTGRES_DB conversion
+
 RUN localedef -i es_ES -c -f utf-8 -A /usr/share/locale/locale.alias es_ES.utf-8
 ENV LANG C.UTF-8
-CMD ["-p 5432"]
+
+COPY docker_postgres_init.sql /docker-entrypoint-initdb.d/
+
+EXPOSE 5432
