--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -16,7 +16,7 @@ Flask-JWT==0.2.0
 Flask-JWT-Extended==4.2.3
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
-# greenlet==2.0.2
+greenlet==2.0.2
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
@@ -24,10 +24,8 @@ kombu==5.2.4
 MarkupSafe==2.0.1
 marshmallow==3.12.1
 marshmallow-sqlalchemy==0.25.0
-psycopg==3.1.8
-psycopg2-binary==2.9.5
-pycparser==2.21
 prompt-toolkit==3.0.38
+psycopg2-binary==2.9.6
 PyJWT==2.1.0
 python-dateutil==2.8.2
 pytz==2023.3
