--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -69,7 +69,8 @@ services:
         ipv4_address: 10.130.13.6
     volumes:
 #      - ../custom-postgres/docker_postgres_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
-      - postgres-data:/var/lib/postgresql/data
+#      - postgres-data:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql/data
 
   custom-nginx:
     container_name: custom-nginx
