--- a/docker/docker-compose.api.dev.yml
+++ b/docker/docker-compose.api.dev.yml
@@ -13,8 +13,8 @@ services:
       redproyecto:
         ipv4_address: 10.130.13.2
     volumes:
-      - uploads-volume:/app/uploads
-      - processed-volume:/app/processed
+      - /nfs/general/uploads:/app/uploads
+      - /nfs/general/processed:/app/processed
 #    depends_on:
 #      - 'custom-postgres'
 
