Ejecutar los contenedores usando variables de entorno

--- a/.gitignore
+++ b/.gitignore
@@ -176,9 +176,8 @@ server/secure/key_prod_rsa
 server/secure/key_prod_rsa.pub
 server/secure/service-account-key.json
 
-server/scripts/entrega2/.bash_profile_jobs
-server/scripts/entrega2/.bash_profile_nfs
-server/scripts/entrega2/.bash_profile_reverse_proxy
+docker/api.env
+docker/jobs.env
 
 # Archivos asociados a la base de datos
 docker/data
