--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -5,26 +5,30 @@ services:
   api:
     container_name: api
     image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/api:latest
+    env_file:
+      - api.env
     ports:
       - '3000:5000'
     networks:
       redproyecto:
         ipv4_address: 10.130.13.2
     volumes:
-      - uploads-volume:/app/uploads
-      - processed-volume:/app/processed
+      - ./var/uploads:/app/uploads
+      - ./var/processed:/app/processed
     depends_on:
       - 'custom-postgres'
 
   jobs:
     container_name: jobs
     image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/jobs:latest
+    env_file:
+      - jobs.env
     networks:
       redproyecto:
         ipv4_address: 10.130.13.3
     volumes:
-      - uploads-volume:/app/uploads
-      - processed-volume:/app/processed
+      - ./var/uploads:/app/uploads
+      - ./var/processed:/app/processed
 
   custom-redis:
     container_name: custom-redis
@@ -75,8 +79,6 @@ services:
 
 volumes:
 
-  uploads-volume:
-  processed-volume:
   redis-data:
   postgres-data:
 
