manejar el volumen de api y jobs a traves del sistema de archivos

--- a/.gitignore
+++ b/.gitignore
@@ -179,5 +179,7 @@ server/secure/service-account-key.json
 docker/api.env
 docker/jobs.env
 
-# Archivos asociados a la base de datos
+# Archivos asociados a los volumenes en sistema de archivos
 docker/data
+docker/uploads
+docker/processed
