--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -13,8 +13,8 @@ services:
       redproyecto:
         ipv4_address: 10.130.13.2
     volumes:
-      - ./uploads:/app/uploads
-      - ./processed:/app/processed
+      - /nfs/general/uploads:/app/uploads
+      - /nfs/general/processed:/app/processed
 
   jobs:
     container_name: jobs
@@ -25,8 +25,8 @@ services:
       redproyecto:
         ipv4_address: 10.130.13.3
     volumes:
-      - ./uploads:/app/uploads
-      - ./processed:/app/processed
+      - /nfs/general/uploads:/app/uploads
+      - /nfs/general/processed:/app/processed
 
   custom-redis:
     container_name: custom-redis
