--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository }}/api:latest
-            ghcr.io/${{ github.repository }}/api:1.0.0
+            ghcr.io/${{ github.repository }}/api:2.0.0
 
   docker-jobs:
     runs-on: ubuntu-latest
@@ -64,7 +64,7 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository }}/jobs:latest
-            ghcr.io/${{ github.repository }}/jobs:1.0.0
+            ghcr.io/${{ github.repository }}/jobs:2.0.0
 
   docker-custom-postgres:
     runs-on: ubuntu-latest
@@ -94,7 +94,7 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository }}/custom-postgres:latest
-            ghcr.io/${{ github.repository }}/custom-postgres:1.0.0
+            ghcr.io/${{ github.repository }}/custom-postgres:2.0.0
 
   docker-custom-redis:
     runs-on: ubuntu-latest
@@ -124,7 +124,7 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository }}/custom-redis:latest
-            ghcr.io/${{ github.repository }}/custom-redis:1.0.0
+            ghcr.io/${{ github.repository }}/custom-redis:2.0.0
 
   docker-custom-nginx:
     runs-on: ubuntu-latest
@@ -154,4 +154,34 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository }}/custom-nginx:latest
-            ghcr.io/${{ github.repository }}/custom-nginx:1.0.0
+            ghcr.io/${{ github.repository }}/custom-nginx:2.0.0
+
+  docker-custom-locust:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: ./test/locust/
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository }}/custom-locust:latest
+            ghcr.io/${{ github.repository }}/custom-locust:2.0.0
