--- a/.gitignore
+++ b/.gitignore
@@ -167,7 +167,7 @@ override.tf.json
 .terraformrc
 terraform.rc
 
-# Archivos del grupo 10
+# =========================== Archivos del grupo 10 ==============================
 # Archivos asociados al despliegue
 # llavemaquina.pem solo existio en la semana 1, cuando desplegamos en AWS:
 server/secure/llavemaquina.pem
@@ -176,8 +176,8 @@ server/secure/key_prod_rsa
 server/secure/key_prod_rsa.pub
 server/secure/service-account-key.json
 
-docker/api.env
-docker/jobs.env
+# Variables de entorno (actualmente existen: jobs.env, api.env, custom-locust.env)
+docker/*.env
 
 # Archivos asociados a los volumenes en sistema de archivos
 docker/data
