--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -43,19 +43,21 @@ services:
     volumes:
       - redis-data:/data
 
-#  redis-commander:
-#    container_name: redis-commander
-#    image: ghcr.io/joeferner/redis-commander:latest
-#    restart: always
-#    environment:
-#      - REDIS_HOSTS=local:redis:6379:0:lOGleSPirDOLEYsiceWlemPtO
-#    ports:
-#      - '8082:8081'
-#    networks:
-#      redproyecto:
-#        ipv4_address: 10.130.13.5
-#    depends_on:
-#      - 'custom-redis'
+  custom-locust:
+    container_name: custom-locust
+    build:
+      context: ../test/locust
+      dockerfile: Dockerfile
+    environment:
+      - G10_JWT_TOKEN=${G10_JWT_TOKEN}
+      - G10_ESCENARIO=${G10_ESCENARIO:-"3"}
+    ports:
+      - '8089:8089'
+    networks:
+      redproyecto:
+        ipv4_address: 10.130.13.5
+    depends_on:
+      - 'custom-nginx'
 
   custom-postgres:
     container_name: custom-postgres
@@ -83,6 +85,20 @@ services:
         ipv4_address: 10.130.13.7
     depends_on:
       - 'api'
+
+#  redis-commander:
+#    container_name: redis-commander
+#    image: ghcr.io/joeferner/redis-commander:latest
+#    restart: always
+#    environment:
+#      - REDIS_HOSTS=local:redis:6379:0:lOGleSPirDOLEYsiceWlemPtO
+#    ports:
+#      - '8082:8081'
+#    networks:
+#      redproyecto:
+#        ipv4_address: 10.130.13.8
+#    depends_on:
+#      - 'custom-redis'
 
 volumes:
 
