--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -4,7 +4,7 @@ services:
 
   api:
     container_name: api
-    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/api:latest
+    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/api:${G10_TAG_VERSION:-"latest"}
     user: 'nobody:nogroup'
     env_file:
       - api.env
@@ -19,7 +19,7 @@ services:
 
   jobs:
     container_name: jobs
-    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/jobs:latest
+    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/jobs:${G10_TAG_VERSION:-"latest"}
     user: 'nobody:nogroup'
     env_file:
       - jobs.env
@@ -32,30 +32,27 @@ services:
 
   custom-redis:
     container_name: custom-redis
-    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-redis:latest
+    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-redis:${G10_TAG_VERSION:-"latest"}
     ports:
       - '6379:6379'
     networks:
       redproyecto:
         ipv4_address: 10.130.13.4
 
-#  redis-commander:
-#    container_name: redis-commander
-#    image: ghcr.io/joeferner/redis-commander:latest
-#    restart: always
-#    environment:
-#      - REDIS_HOSTS=local:redis:6379:0:lOGleSPirDOLEYsiceWlemPtO
-#    ports:
-#      - '8082:8081'
-#    networks:
-#      redproyecto:
-#        ipv4_address: 10.130.13.5
-#    depends_on:
-#      - 'custom-redis'
+  custom-locust:
+    container_name: custom-locust
+    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-locust:${G10_TAG_VERSION:-"latest"}
+    env_file:
+      - custom-locust.env
+    ports:
+      - '8089:8089'
+    networks:
+      redproyecto:
+        ipv4_address: 10.130.13.5
 
   custom-postgres:
     container_name: custom-postgres
-    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-postgres:latest
+    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-postgres:${G10_TAG_VERSION:-"latest"}
     ports:
       - "5433:5432"
     networks:
@@ -64,7 +61,7 @@ services:
 
   custom-nginx:
     container_name: custom-nginx
-    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-nginx:latest
+    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-nginx:${G10_TAG_VERSION:-"latest"}
     ports:
       - '8888:8888'
     networks:
