--- a/.gitignore
+++ b/.gitignore
@@ -167,8 +167,11 @@ override.tf.json
 .terraformrc
 terraform.rc
 
-# Archivos del grupo 10
-# Archivos asociados al despliegue
+# Archivos asociados a los volumenes en sistema de archivos
+docker/data
+
+# ======================== Archivos del grupo 10 ========================
+# Archivos asociados al despliegue (estructura de los secretos)
 # llavemaquina.pem solo existio en la semana 1, cuando desplegamos en AWS:
 server/secure/llavemaquina.pem
 server/secure/github-token.txt
@@ -178,8 +181,4 @@ server/secure/service-account-key.json
 
 docker/api.env
 docker/jobs.env
-
-# Archivos asociados a los volumenes en sistema de archivos
-docker/data
-docker/uploads
-docker/processed
+docker/custom-locust.env
