--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -4,7 +4,7 @@ services:
 
   api:
     container_name: api
-    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/api:${G10_TAG_VERSION:-"latest"}
+    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/api:${G10_TAG_VERSION:-latest}
     user: 'nobody:nogroup'
     env_file:
       - api.env
@@ -19,7 +19,7 @@ services:
 
   jobs:
     container_name: jobs
-    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/jobs:${G10_TAG_VERSION:-"latest"}
+    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/jobs:${G10_TAG_VERSION:-latest}
     user: 'nobody:nogroup'
     env_file:
       - jobs.env
@@ -32,7 +32,7 @@ services:
 
   custom-redis:
     container_name: custom-redis
-    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-redis:${G10_TAG_VERSION:-"latest"}
+    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-redis:${G10_TAG_VERSION:-latest}
     ports:
       - '6379:6379'
     networks:
@@ -41,7 +41,7 @@ services:
 
   custom-locust:
     container_name: custom-locust
-    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-locust:${G10_TAG_VERSION:-"latest"}
+    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-locust:${G10_TAG_VERSION:-latest}
     env_file:
       - custom-locust.env
     ports:
@@ -52,7 +52,7 @@ services:
 
   custom-postgres:
     container_name: custom-postgres
-    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-postgres:${G10_TAG_VERSION:-"latest"}
+    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-postgres:${G10_TAG_VERSION:-latest}
     ports:
       - "5433:5432"
     networks:
@@ -61,7 +61,7 @@ services:
 
   custom-nginx:
     container_name: custom-nginx
-    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-nginx:${G10_TAG_VERSION:-"latest"}
+    image: ghcr.io/je-guerreroa1-uniandes/grupo-10-nube/custom-nginx:${G10_TAG_VERSION:-latest}
     ports:
       - '8888:8888'
     networks:
