feat: Update docker file for worker

--- a/jobs/Dockerfile
+++ b/jobs/Dockerfile
@@ -15,4 +15,5 @@ RUN pip3 install -r requirements.txt
 
 COPY . .
 
-CMD [ "celery", "-A", "app", "worker", "-l", "info", "-Q", "files"]
+#CMD [ "celery", "-A", "app", "worker", "-l", "info", "-Q", "files"]
+CMD [ "python", "-m" , "flask", "run", "--host=0.0.0.0"]
