--- a/jobs/Dockerfile
+++ b/jobs/Dockerfile
@@ -16,4 +16,4 @@ RUN pip3 install -r requirements.txt
 COPY . .
 
 #CMD [ "celery", "-A", "app", "worker", "-l", "info", "-Q", "files"]
-CMD [ "python", "-m" , "flask", "run", "--host=0.0.0.0"]
+CMD [ "python", "-m" , "worker"]
