feat: Update worker and api to use cloud storage

--- a/jobs/requirements.txt
+++ b/jobs/requirements.txt
@@ -16,7 +16,11 @@ Flask==2.2.5
 Flask-SQLAlchemy==3.0.3
 google-api-core==2.11.0
 google-auth==2.18.1
+google-cloud-core==2.3.2
 google-cloud-pubsub==2.17.0
+google-cloud-storage==2.9.0
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
 googleapis-common-protos==1.59.0
 grpc-google-iam-v1==0.12.6
 grpcio==1.54.2
