--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -22,11 +22,15 @@ Flask-SQLAlchemy==2.5.1
 google-api-core==2.11.0
 google-auth==2.18.1
 google-cloud-core==2.3.2
+google-cloud-pubsub==2.17.0
 google-cloud-storage==2.9.0
 google-crc32c==1.5.0
 google-resumable-media==2.5.0
 googleapis-common-protos==1.59.0
 greenlet==2.0.2
+grpc-google-iam-v1==0.12.6
+grpcio==1.54.2
+grpcio-status==1.54.2
 gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.0.1
@@ -36,6 +40,7 @@ MarkupSafe==2.0.1
 marshmallow==3.12.1
 marshmallow-sqlalchemy==0.25.0
 prompt-toolkit==3.0.38
+proto-plus==1.22.2
 protobuf==4.23.1
 psycopg2-binary==2.9.6
 pyasn1==0.5.0
