Especificar mas la máquina seleccionada 2.

--- a/api/app.yaml
+++ b/api/app.yaml
@@ -1,8 +1,10 @@
+# Python 3.7, 3.8, and 3.9 run on Ubuntu 18.04
+# Python 3.10 and 3.11 run on Ubuntu 22.04
 runtime: python39
 
 service: api # This service name is used in the URL for the service. {'api', 'jobs'}
 
-instance_class: B2
+instance_class: B2 # (default instance class) Number of workers=4, Memory Limit=768MB, CPU Limit=1.2GHz 
 
 basic_scaling:
   max_instances: 5
@@ -19,4 +21,4 @@ handlers:
   http_headers:
     Access-Control-Allow-Origin: '*'
 
-entrypoint: gunicorn -b :$PORT wsgi:app
+entrypoint: gunicorn -b :$PORT -w 4 wsgi:app
