Correcciones despues de la primera ejecucion en app engine

--- a/api/app.yaml
+++ b/api/app.yaml
@@ -2,7 +2,9 @@
 # Python 3.10 and 3.11 run on Ubuntu 22.04
 runtime: python39
 
-service: api # This service name is used in the URL for the service. {'api', 'jobs'}
+# The first service (module) you upload to a new application must be the 'default' service (module).
+# Please upload a version of the 'default' service (module) before uploading a version for the 'api' service
+service: default
 
 instance_class: B2 # (default instance class) Number of workers=4, Memory Limit=768MB, CPU Limit=1.2GHz 
 
@@ -18,7 +20,5 @@ handlers:
   secure: always # OJO: Este puede que toque comentarlo
   redirect_http_response_code: 301
   script: auto
-  http_headers:
-    Access-Control-Allow-Origin: '*'
 
 entrypoint: gunicorn -b :$PORT -w 4 wsgi:app
