--- a/jobs/requirements.txt
+++ b/jobs/requirements.txt
@@ -22,9 +22,11 @@ google-cloud-storage==2.9.0
 google-crc32c==1.5.0
 google-resumable-media==2.5.0
 googleapis-common-protos==1.59.0
+greenlet==2.0.2
 grpc-google-iam-v1==0.12.6
 grpcio==1.54.2
 grpcio-status==1.54.2
+gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
