--- a/jobs/app.yaml
+++ b/jobs/app.yaml
@@ -14,7 +14,7 @@ env_variables: # Este bloque se usa para definir variables de entorno.
   G10_DB_PREFIX: "postgresql"
   G10_DB_USERNAME: "converter_db"
   G10_DB_PASSWORD: "ckhAMLIteFlYheRptAteapeze"
-  G10_DB_HOST: "10.93.240.3"
+  G10_DB_HOST: "34.71.6.228"
   G10_DB_PORT: "5432"
   G10_DB_DBNAME: "conversion"
 
@@ -24,4 +24,4 @@ handlers:
   redirect_http_response_code: 301
   script: auto
 
-entrypoint: python3 -m worker.py
+entrypoint: python3 worker.py
