--- a/api/app.yaml
+++ b/api/app.yaml
@@ -12,13 +12,10 @@ basic_scaling:
   max_instances: 5
   idle_timeout: 10m
 
-env_variables: # Este bloque se usa para definir variables de entorno.
-  G10_DB_PREFIX: "postgresql"
-  G10_DB_USERNAME: "converter_db"
-  G10_DB_PASSWORD: "ckhAMLIteFlYheRptAteapeze"
-  G10_DB_HOST: "34.71.6.228"
-  G10_DB_PORT: "5432"
-  G10_DB_DBNAME: "conversion"
+# Con este include podemos declarar variables de entorno en un archivo aparte
+# y dejarlo por fuera del repositorio con el .gitignore
+includes:
+  - env_variables.yaml
 
 handlers:
 - url: /.*
@@ -26,4 +23,7 @@ handlers:
   redirect_http_response_code: 301
   script: auto
 
-entrypoint: gunicorn -b :$PORT -w 4 wsgi:app
+#entrypoint: gunicorn -b :$PORT -w 4 wsgi:app
+
+# Usar este entrypoint para ver mas informacion de los errores
+entrypoint: flask run --port=$PORT
